Fixed overflowing grid bug by removing margin

--- a/style.css
+++ b/style.css
@@ -9,16 +9,14 @@ div {
 
 #container {
     justify-content: center;
-}
-
-.cube {
-    border: solid black 1px;
+    border: 0px;
 }
 
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background-color: palegreen;
 }
 
 #grid-window {
